--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,10 @@ orbs:
   node: circleci/node@4.1.0
 jobs:
   test:
-    executor: node/default
+    docker:
+      - image: cimg/node:lts
+        environment:
+          TZ: America/Bogota
     environment:
       TZ: America/Bogota
     steps:
