--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,9 @@ jobs:
     environment:
       TZ: America/Bogota
     steps:
+      - run:
+          name: Setup timezone
+          command: ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
       - checkout
       - node/install-packages
       - run:
