--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - run:
           name: Setup timezone
-          command: ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+          command: sudo apt-get update && sudo apt-get install -y tzdata
       - checkout
       - node/install-packages
       - run:
