--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,11 +16,7 @@ jobs:
           command: sudo apt-get update && sudo apt-get install -y tzdata
       - checkout
       - node/install-packages
-      - run:
-          command: |
-            echo tz=$TZ
-            date
-            npm test
+      - run: npm test
 workflows:
   node-tests:
     jobs:
