--- a/server/src/db/config.json
+++ b/server/src/db/config.json
@@ -11,7 +11,7 @@
   },
   "production": {
     "dialect": "sqlite",
-    "storage": "db.sqlite",
+    "storage": "/db/db.sqlite",
     "logQueryParameters": true
   }
 }
