--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "fork-ts-checker-webpack-plugin": "^4.1.3",
     "formik": "^2.1.4",
     "html-webpack-plugin": "^4.2.0",
+    "immutable": "^4.0.0-rc.14",
     "jest": "^26.6.3",
     "jest-extended": "^0.11.5",
     "material-ui-flat-pagination": "^4.1.0",
