--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@react-hook/debounce": "^3.0.0",
     "@react-pdf/renderer": "^1.6.12",
     "@types/lodash.groupby": "^4.6.7",
+    "@types/socket.io-parser": "^2.2.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "buffer": "^6.0.3",
@@ -76,7 +77,6 @@
     "@types/umzug": "^2.3.3",
     "@types/use-deep-compare-effect": "^1.5.1",
     "@types/validator": "^13.7.17",
-    "@types/yup": "^0.28.3",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "assert": "^2.0.0",
