--- a/package.json
+++ b/package.json
@@ -17,11 +17,8 @@
     "watch-client-js": "npm run build-client-dev -- -w",
     "watch-server-js": "npm run build-server-js -- -w --preserveWatchOutput"
   },
-  "resolutions": {
-    "@types/react": "^16.9.16",
-    "@types/react-dom": "^16.9.4",
-    "@types/react-router": "^5.1.3",
-    "@types/react-router-dom": "^5.1.3"
+  "overrides": {
+    "@types/express-unless": "^0.5.3"
   },
   "dependencies": {
     "@material-ui/lab": "^4.0.0-alpha.56",
