--- a/package.json
+++ b/package.json
@@ -17,16 +17,13 @@
     "watch-client-js": "npm run build-client-dev -- -w",
     "watch-server-js": "npm run build-server-js -- -w --preserveWatchOutput"
   },
-  "resolutions": {
-    "@types/react": "^16.9.16",
-    "@types/react-dom": "^16.9.4",
-    "@types/react-router": "^5.1.3",
-    "@types/react-router-dom": "^5.1.3"
+  "overrides": {
+    "@types/express-unless": "^0.5.3"
   },
   "dependencies": {
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@react-hook/debounce": "^3.0.0",
-    "@react-pdf/renderer": "^1.6.12",
+    "@react-pdf/renderer": "^1.6.17",
     "@types/lodash.groupby": "^4.6.7",
     "@types/socket.io-parser": "^2.2.1",
     "bcryptjs": "^2.4.3",
@@ -47,6 +44,7 @@
     "sequelize": "^5.22.5",
     "sequelize-cli": "^5.5.1",
     "socket.io": "^2.5.0",
+    "socket.io-parser": "^3.4.2",
     "sqlite3": "^5.1.6",
     "use-deep-compare-effect": "^1.8.1",
     "yup": "^0.32.11"
@@ -91,7 +89,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "faker": "^5.5.3",
-    "file-loader": "^6.0.0",
+    "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^8.0.0",
     "formik": "^2.2.9",
     "html-webpack-plugin": "^5.5.1",
@@ -101,7 +99,7 @@
     "material-ui-flat-pagination": "^4.1.2",
     "moment-locales-webpack-plugin": "^1.2.0",
     "nodemon": "^2.0.22",
-    "npm-run-all": "^4.1.3",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
     "ramda": "^0.29.0",
     "react": "^16.13.1",
