--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -12,18 +12,21 @@ server {
     }
 
     client_max_body_size 100m;
+    # Fix issue with large cookies
+    client_header_buffer_size 64k;
+    large_client_header_buffers 4 64k;
 
     # SSL Setup
     listen 443 ssl;
     ssl_certificate /etc/letsencrypt/live/agua.kevinpena.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/agua.kevinpena.com/privkey.pem;
 
-		ssl_session_cache shared:le_nginx_SSL:10m;
-		ssl_session_timeout 1440m;
-		ssl_session_tickets off;
+        ssl_session_cache shared:le_nginx_SSL:10m;
+        ssl_session_timeout 1440m;
+        ssl_session_tickets off;
 
-		ssl_protocols TLSv1.2 TLSv1.3;
-		ssl_prefer_server_ciphers off;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers off;
 
-		ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384";
+        ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384";
 }
