--- a/package.json
+++ b/package.json
@@ -17,28 +17,10 @@
     "watch-client-js": "npm run build-client-dev -- -w",
     "watch-server-js": "npm run build-server-js -- -w --preserveWatchOutput"
   },
-  "overrides": {
-    "@types/express-unless": "^0.5.3"
-  },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^5.16.14",
-    "@mui/lab": "^5.0.0-alpha.175",
-    "@mui/material": "^5.16.14",
-    "@mui/styled-engine": "^5.16.14",
-    "@mui/styles": "^5.16.14",
-    "@mui/x-date-pickers": "^7.26.0",
-    "@react-hook/debounce": "^3.0.0",
-    "@react-pdf/renderer": "^4.2.1",
-    "@types/classnames": "^2.3.0",
-    "@types/lodash.groupby": "^4.6.7",
-    "@types/socket.io-parser": "^2.2.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "buffer": "^6.0.3",
-    "classnames": "^2.5.1",
-    "cls-hooked": "^4.2.2",
     "compression": "^1.7.4",
     "connect-session-sequelize": "^6.1.1",
     "cors": "^2.8.4",
@@ -48,13 +30,12 @@
     "express-session": "^1.17.3",
     "jwks-rsa": "^1.12.3",
     "lodash.groupby": "^4.6.0",
-    "process": "^0.11.10",
+    "moment": "^2.30.1",
     "sequelize": "^5.22.5",
     "sequelize-cli": "^5.5.1",
     "socket.io": "^2.5.0",
     "socket.io-parser": "^3.4.2",
     "sqlite3": "^5.1.6",
-    "use-deep-compare-effect": "^1.8.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -62,17 +43,26 @@
     "@babel/core": "^7.26.8",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
-    "@date-io/moment": "^1.3.13",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.4",
+    "@mui/material": "^6.4.4",
+    "@mui/styled-engine": "^6.4.3",
+    "@mui/styles": "^6.4.4",
+    "@mui/x-date-pickers": "^7.26.0",
+    "@react-hook/debounce": "^3.0.0",
+    "@react-pdf/renderer": "^4.2.1",
     "@types/auth0-js": "^9.14.7",
     "@types/bcryptjs": "^2.4.1",
     "@types/bluebird": "^3.5.38",
-    "@types/cls-hooked": "^4.3.3",
+    "@types/classnames": "^2.3.0",
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.13",
     "@types/debug": "^4.1.7",
     "@types/express-session": "^1.17.7",
     "@types/faker": "^5.5.3",
     "@types/jest": "^29.5.1",
+    "@types/lodash.groupby": "^4.6.7",
     "@types/node": "^18.15.10",
     "@types/ramda": "^0.29.1",
     "@types/react": "^17.0.83",
@@ -80,9 +70,9 @@
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "@types/socket.io": "^2.1.13",
+    "@types/socket.io-parser": "^2.2.1",
     "@types/supertest": "^2.0.12",
     "@types/umzug": "^2.3.3",
-    "@types/use-deep-compare-effect": "^1.5.1",
     "@types/validator": "^13.7.17",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
@@ -91,6 +81,7 @@
     "babel-loader": "^9.2.1",
     "babel-plugin-import": "^1.13.8",
     "browserify-zlib": "^0.2.0",
+    "classnames": "^2.5.1",
     "clean-webpack-plugin": "^4.0.0",
     "clsx": "^1.2.1",
     "copyfiles": "^2.4.1",
@@ -111,6 +102,7 @@
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
+    "process": "^0.11.10",
     "ramda": "^0.29.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -122,8 +114,9 @@
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.5.2",
-    "typescript": "^5.0.4",
+    "typescript": "^5.7.3",
     "umzug": "^2.3.0",
+    "use-deep-compare-effect": "^1.8.1",
     "util": "^0.12.5",
     "webpack": "^5.82.1",
     "webpack-bundle-analyzer": "^4.8.0",
