--- a/package.json
+++ b/package.json
@@ -67,7 +67,6 @@
     "@types/ramda": "^0.29.1",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "@types/socket.io": "^2.1.13",
     "@types/socket.io-parser": "^2.2.1",
@@ -107,7 +106,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-number-format": "^5.4.3",
-    "react-router-dom": "^6.29.0",
+    "react-router": "^7.1.5",
     "socket.io-client": "^2.5.0",
     "stream-browserify": "^3.0.0",
     "supertest": "^6.3.3",
