--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -1,7 +1,8 @@
 {
   "plugins": [
     "react",
-    "react-hooks"
+    "react-hooks",
+    "eslint-plugin-react-compiler"
   ],
   "extends": [
     "../.eslintrc",
@@ -10,6 +11,7 @@
   ],
   "rules": {
     "react/react-in-jsx-scope": "off",
+    "react-compiler/react-compiler": "error"
   },
   "parserOptions": {
     "project": [
