--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "auth0-js": "^9.23.2",
     "babel-loader": "^9.2.1",
     "babel-plugin-import": "^1.13.8",
+    "babel-plugin-react-compiler": "^19.0.0-beta-30d8a17-20250209",
     "browserify-zlib": "^0.2.0",
     "classnames": "^2.5.1",
     "clean-webpack-plugin": "^4.0.0",
@@ -88,6 +89,7 @@
     "eslint": "^8.40.0",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-30d8a17-20250209",
     "eslint-plugin-react-hooks": "^4.6.0",
     "faker": "^5.5.3",
     "file-loader": "^6.2.0",
@@ -104,6 +106,7 @@
     "process": "^0.11.10",
     "ramda": "^0.29.0",
     "react": "^19.0.0",
+    "react-compiler-runtime": "^19.0.0-beta-30d8a17-20250209",
     "react-dom": "^19.0.0",
     "react-number-format": "^5.4.3",
     "react-router": "^7.1.5",
