--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
     "watch-build": "npm run build -- -w"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "buffer": "^6.0.3",
     "compression": "^1.7.4",
@@ -25,49 +25,39 @@
     "date-fns": "^4.1.0",
     "debug": "^4.4.0",
     "express": "^5.0.1",
-    "express-jwt": "^6.1.2",
+    "express-jwt": "^8.5.1",
     "express-session": "^1.18.1",
-    "jwks-rsa": "^1.12.3",
+    "jwks-rsa": "^3.1.0",
     "qs": "^6.14.0",
     "sequelize": "^6.37.5",
     "sequelize-cli": "^6.6.2",
-    "socket.io": "^2.5.0",
+    "socket.io": "^4.8.1",
     "sqlite3": "^5.1.7",
-    "yup": "^0.32.11"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.26.4",
     "@babel/core": "^7.26.8",
     "@babel/preset-typescript": "^7.26.0",
     "@eslint/js": "^9.20.0",
+    "@faker-js/faker": "^9.5.0",
     "@tsconfig/node22": "^22.0.0",
-    "@types/auth0-js": "^9.14.7",
     "@types/bcryptjs": "^2.4.1",
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.13",
-    "@types/date-fns": "^2.6.3",
     "@types/debug": "^4.1.7",
     "@types/express-session": "^1.17.7",
-    "@types/faker": "^5.5.3",
-    "@types/jest": "^29.5.1",
     "@types/node": "^22.13.4",
-    "@types/socket.io": "^2.1.13",
-    "@types/supertest": "^2.0.12",
+    "@types/supertest": "^6.0.2",
     "@types/umzug": "^2.3.3",
-    "auth0-js": "^9.23.2",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "eslint": "^9.20.1",
-    "faker": "^5.5.3",
     "glob": "^11.0.1",
-    "jest": "^29.5.0",
-    "jest-extended": "^3.2.4",
     "npm-run-all": "^4.1.5",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0",
-    "tsx": "^4.19.2",
+    "supertest": "^7.0.0",
+    "tsx": "^4.19.3",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.24.0",
-    "umzug": "^2.3.0"
+    "typescript-eslint": "^8.24.1"
   }
 }
