--- a/client/package.json
+++ b/client/package.json
@@ -53,8 +53,9 @@
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.20.1",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-compiler": "^19.0.0-beta-30d8a17-20250209",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-21e868a-20250216",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.1",
     "typescript": "^5.7.3",
