--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "formik": "^2.2.9",
-    "lodash.groupby": "^4.6.0",
+    "lodash-es": "^4.17.21",
     "react": "^19.0.0",
     "react-compiler-runtime": "^19.0.0-beta-30d8a17-20250209",
     "react-dom": "^19.0.0",
@@ -44,6 +44,7 @@
     "@babel/preset-typescript": "^7.26.0",
     "@eslint/js": "^9.20.0",
     "@types/auth0-js": "^9.14.7",
+    "@types/lodash-es": "^4.17.12",
     "@types/lodash.groupby": "^4.6.7",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
