--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -7,6 +7,9 @@ server {
 
     gzip on;
     gzip_types text/html application/javascript application/json text/css image/svg+xml;
+    log_format main '$remote_addr - $remote_user [$time_local] '
+                    '"$request" $status $body_bytes_sent $request_time $upstream_addr'
+                    '"$http_referer" "$http_user_agent"';
 
     # Server
     location /api {
