--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,6 +1,6 @@
-log_format main '$remote_addr - $remote_user [$time_local] '
-                '"$request" $status $body_bytes_sent $request_time $upstream_addr'
-                '"$http_referer" "$http_user_agent"';
+log_format app '$remote_addr - $remote_user [$time_local] '
+               '"$request" $status $body_bytes_sent $request_time $upstream_addr'
+               '"$http_referer" "$http_user_agent"';
 
 server {
     listen 80 default_server;
@@ -8,6 +8,8 @@ server {
 
     root /app/public;
     index index.html;
+
+    access_log /dev/stdout app;
 
     gzip on;
     gzip_types text/html application/javascript application/json text/css image/svg+xml;
