--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -40,7 +40,7 @@ server {
     large_client_header_buffers 4 64k;
 
     # SSL Setup
-    listen 443 ssl;
+    listen 443 ssl http2;
     ssl_certificate /etc/letsencrypt/live/agua.kevinpena.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/agua.kevinpena.com/privkey.pem;
 
