--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,10 +1,16 @@
 log_format app '$remote_addr - $remote_user [$time_local] '
                '"$request" $status $body_bytes_sent $request_time $upstream_addr'
                '"$http_referer" "$http_user_agent"';
-
 server {
     listen 80 default_server;
     server_name agua.kevinpena.com;
+    access_log /dev/stdout app;
+
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl http2 default_server;
 
     root /app/public;
     index index.html;
@@ -40,7 +46,6 @@ server {
     large_client_header_buffers 4 64k;
 
     # SSL Setup
-    listen 443 ssl http2;
     ssl_certificate /etc/letsencrypt/live/agua.kevinpena.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/agua.kevinpena.com/privkey.pem;
 
