--- a/.github/workflows/pr_validation.yml
+++ b/.github/workflows/pr_validation.yml
@@ -88,3 +88,46 @@ jobs:
       with:
         report-path: './server/ctrf/*.json'
       if: always()
+  
+  publish-images:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+        - image: aguasoft
+          context: .
+          target: server
+        - image: nginx
+          context: .
+          target: client
+        - image: certbot-dns-digitalocean
+          context: docker/certbot
+          target: ''
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+    - name: Log in to the Container registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - name: Docker meta
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        images: |
+          ghcr.io/${{ github.actor }}/${{ matrix.image }}
+        tags: |
+          type=ref,event=pr
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v4
+      with:
+        context: ${{ matrix.context }}
+        target: ${{ matrix.target }}
+        push: true
+        tags: ${{ steps.meta.outputs.tags }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
