--- a/.github/workflows/pr_validation.yml
+++ b/.github/workflows/pr_validation.yml
@@ -4,80 +4,68 @@ on:
   pull_request:
     branches: [ "master" ]
 
+env:
+  node-version: 24.x
+
 jobs:
   build-client:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [22.x]
     env:
       TZ: America/Bogota
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js ${{ env.node-version }}
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: ${{ env.node-version }}
     - run: cd client && npm ci && npm run build
 
   build-server:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [22.x]
     env:
       TZ: America/Bogota
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js ${{ env.node-version }}
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: ${{ env.node-version }}
     - run: cd server && npm ci && npm run build
 
   check-client:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [22.x]
     env:
       TZ: America/Bogota
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js ${{ env.node-version }}
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: ${{ env.node-version }}
     - run: cd client && npm ci && npm run typecheck && npm run lint
 
   check-server:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [22.x]
     env:
       TZ: America/Bogota
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js ${{ env.node-version }}
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: ${{ env.node-version }}
     - run: cd server && npm ci && npm run typecheck && npm run lint
 
   test-server:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [23.x]
     env:
       TZ: America/Bogota
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js ${{ env.node-version }}
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: ${{ env.node-version }}
 
     - run: cd server && npm ci
     - run: cd server && npm run test:junit
@@ -91,43 +79,65 @@ jobs:
   
   publish-images:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        include:
-        - image: aguasoft
-          context: .
-          target: server
-        - image: nginx
-          context: .
-          target: client
-        - image: certbot-dns-digitalocean
-          context: docker/certbot
-          target: ''
+    # strategy:
+    #   matrix:
+    #     include:
+    #     - image: aguasoft
+    #       context: .
+    #       target: server
+    #     - image: nginx
+    #       context: .
+    #       target: client
+    #     - image: certbot-dns-digitalocean
+    #       context: docker/certbot
+    #       target: ''
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+
     - name: Log in to the Container registry
       uses: docker/login-action@v3
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Docker meta
       id: meta
       uses: docker/metadata-action@v5
       with:
-        images: |
-          ghcr.io/${{ github.actor }}/${{ matrix.image }}
         tags: |
           type=ref,event=pr
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
+
     - name: Build and push Docker images
-      uses: docker/build-push-action@v4
-      with:
-        context: ${{ matrix.context }}
-        target: ${{ matrix.target }}
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
+      run: |
+        cat <<'EOF' > tags.json
+        {
+          "target": {
+            "aguasoft": {
+              "tags": [ "ghcr.io/${{ github.actor }}/aguasoft:${{ steps.meta.outputs.tags }}" ]
+            },
+            "nginx": {
+              "tags": [ "ghcr.io/${{ github.actor }}/nginx:${{ steps.meta.outputs.tags }}" ]
+            },
+            "certbot": {
+              "tags": [ "ghcr.io/${{ github.actor }}/certbot-dns-digitalocean:${{ steps.meta.outputs.tags }}" ]
+            }
+          }
+        }
+        EOF
+        docker buildx bake -f docker-compose.prod.yml --file tags.json --push
+
+
+    # - name: Build and push Docker images
+    #   uses: docker/build-push-action@v4
+    #   with:
+    #     context: ${{ matrix.context }}
+    #     target: ${{ matrix.target }}
+    #     push: true
+    #     tags: ${{ steps.meta.outputs.tags }}
+    #     cache-from: type=gha
+    #     cache-to: type=gha,mode=max
