--- a/server/package.json
+++ b/server/package.json
@@ -23,8 +23,7 @@
     "connect-session-sequelize": "^8.0.2",
     "cors": "^2.8.4",
     "date-fns": "^4.1.0",
-    "debug": "^4.4.1",
-    "express": "^5.1.0",
+    "debug": "^4.4.3",
     "express-jwt": "^8.5.1",
     "express-session": "^1.18.2",
     "jwks-rsa": "^3.2.0",
@@ -33,30 +32,31 @@
     "sequelize-cli": "^6.6.3",
     "socket.io": "^4.8.1",
     "sqlite3": "^5.1.7",
-    "yup": "^1.6.1"
+    "ultimate-express": "^2.0.12",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.28.0",
-    "@babel/core": "^7.28.0",
-    "@babel/preset-typescript": "^7.27.1",
-    "@eslint/js": "^9.31.0",
-    "@faker-js/faker": "^10.0.0",
+    "@babel/cli": "^7.28.3",
+    "@babel/core": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
+    "@eslint/js": "^9.38.0",
+    "@faker-js/faker": "^10.1.0",
     "@tsconfig/node22": "^22.0.2",
     "@types/bcryptjs": "^3.0.0",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/debug": "^4.1.7",
     "@types/express-session": "^1.18.2",
-    "@types/node": "^24.5.2",
+    "@types/node": "^24.9.1",
     "@types/supertest": "^6.0.3",
     "copyfiles": "^2.4.1",
-    "cross-env": "^10.0.0",
-    "eslint": "^9.31.0",
+    "cross-env": "^10.1.0",
+    "eslint": "^9.38.0",
     "glob": "^11.0.3",
     "npm-run-all": "^4.1.5",
     "supertest": "^7.1.4",
-    "tsx": "^4.20.3",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.38.0"
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.2"
   }
 }
