--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint .",
     "typecheck": "tsc --noEmit",
     "migrate": "npm run build && sequelize db:migrate",
-    "start": "node dist/index.js",
+    "start": "node dist/clustered.js",
     "start-dev": "node --import tsx src/index.ts",
     "test": "tsx test.ts",
     "test:junit": "tsx test.ts --test-reporter=junit --test-reporter-destination=test-report.xml",
@@ -21,9 +21,9 @@
     "body-parser": "^2.2.0",
     "buffer": "^6.0.3",
     "connect-session-sequelize": "^8.0.2",
-    "cors": "^2.8.4",
     "date-fns": "^4.1.0",
     "debug": "^4.4.3",
+    "express": "npm:ultimate-express",
     "express-jwt": "^8.5.1",
     "express-session": "^1.18.2",
     "jwks-rsa": "^3.2.0",
