--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,9 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "better-sqlite3": "^12.4.1",
     "body-parser": "^2.2.0",
     "buffer": "^6.0.3",
-    "connect-session-sequelize": "^8.0.2",
     "date-fns": "^4.1.0",
     "debug": "^4.4.3",
     "express": "npm:ultimate-express",
@@ -42,6 +42,7 @@
     "@faker-js/faker": "^10.1.0",
     "@tsconfig/node22": "^22.0.2",
     "@types/bcryptjs": "^3.0.0",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/debug": "^4.1.7",
